--- a/experiment-1/analysis/stats/dynamics.Rmd
+++ b/experiment-1/analysis/stats/dynamics.Rmd
@@ -126,8 +126,7 @@ vel_dyn
 ### Plot
 #### Box plot
 ```{r vel-dyn-box,  echo = FALSE}
-ggboxplot(vel_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Dynamics") +
-  facet_grid(Subcomponent ~ .)
+ggboxplot(vel_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Dynamics") + facet_grid(Subcomponent ~ .)
 ```
 
 ## 2. All - group{#vel_dyn_group_all}
@@ -178,13 +177,11 @@ vel_dyn_trial
 ### Plot
 #### Line graph
 ```{r vel-dyn-trial-line-forte, echo = FALSE, fig.height = 4}
-ggline(dt_vel_dyn[Subcomponent == "Forte", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(dt_vel_dyn[Subcomponent == "Forte", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-dyn-trial-line-piano, echo = FALSE, fig.height = 4}
-ggline(dt_vel_dyn[Subcomponent == "Piano", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(dt_vel_dyn[Subcomponent == "Piano", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_dyn_group_trial}
@@ -201,13 +198,11 @@ vel_dyn_trial_all
 - Error bars show SEM of the mean.
 
 ```{r vel-dyn-trial-all-line-forte, echo = FALSE}
-ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
-    scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-dyn-trial-all-line-piano, echo = FALSE}
-ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
-    scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity Difference (Difference) - Dynamics
@@ -225,8 +220,7 @@ vel_diff_dyn
 ### Plot
 #### Box plot
 ```{r vel-diff-dyn-box,  echo = FALSE}
-ggboxplot(vel_diff_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Dynamics") +
-  facet_grid(Subcomponent ~ .)
+ggboxplot(vel_diff_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Dynamics") + facet_grid(Subcomponent ~ .)
 ```
 
 ## 2. All - group{#vel_diff_dyn_group_all}
@@ -276,13 +270,11 @@ vel_diff_dyn_trial
 ### Plot
 #### Line graph
 ```{r vel-diff-dyn-trial-line-ftop, echo = FALSE, fig.height = 4}
-ggline(vel_diff_dyn_trial[Subcomponent == "FtoP"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_dyn_trial[Subcomponent == "FtoP"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-dyn-trial-line-ptof, echo = FALSE, fig.height = 4}
-ggline(vel_diff_dyn_trial[Subcomponent == "PtoF"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_dyn_trial[Subcomponent == "PtoF"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_diff_dyn_group_trial}
@@ -299,13 +291,11 @@ vel_diff_dyn_trial_all
 - Error bars show SEM of the mean.
 
 ```{r vel-diff-dyn-trial-all-line-ftop, echo = FALSE}
-ggline(vel_diff_dyn_trial[Subcomponent == "FtoP"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_dyn_trial[Subcomponent == "FtoP"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-dyn-trial-all-line-ptof, echo = FALSE}
-ggline(vel_diff_dyn_trial[Subcomponent == "PtoF"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_dyn_trial[Subcomponent == "PtoF"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity (KV) - Articulation
@@ -323,8 +313,7 @@ vel_art
 ### Plot
 #### Box plot
 ```{r vel-art-box,  echo = FALSE}
-ggboxplot(vel_art_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Articulation") +
-  facet_grid(Subcomponent ~ .)
+ggboxplot(vel_art_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Articulation") + facet_grid(Subcomponent ~ .)
 ```
 
 ## 2. All - group{#vel_art_group_all}
@@ -395,13 +384,11 @@ vel_art_trial_all
 - Error bars show SEM of the mean.
 
 ```{r vel-art-trial-all-line-legato, echo = FALSE}
-ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Legato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Legato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-art-trial-all-line-staccato, echo = FALSE}
-ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity Difference (Difference) - Articulation{#vel_articulation}
@@ -419,8 +406,7 @@ vel_diff_art
 ### Plot
 #### Box plot
 ```{r vel-diff-art-box,  echo = FALSE}
-ggboxplot(vel_diff_art_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Articulation") +
-  facet_grid(Subcomponent ~ .)
+ggboxplot(vel_diff_art_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Articulation") + facet_grid(Subcomponent ~ .)
 ```
 
 ## 2. All - group{#vel_diff_art_group_all}
@@ -470,13 +456,11 @@ vel_diff_art_trial
 ### Plot
 #### Line graph
 ```{r vel-diff-artt-rial-line-ltos, echo = FALSE, fig.height = 4}
-ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-art-trial-line-stol, echo = FALSE, fig.height = 4}
-ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_diff_art_group_trial}
@@ -506,13 +490,11 @@ ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", ad
 # For each individual
 vel_dyn_seq <- dt_vel_dyn[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, RowNr)]
 
-ggline(vel_dyn_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Dynamics") +
-  scale_x_continuous(breaks = seq(1,67,1))
+ggline(vel_dyn_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Dynamics") + scale_x_continuous(breaks = seq(1,67,1))
 
 vel_diff_dyn_seq <- dt_vel_diff_dyn[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Dynamics") +
-  scale_x_continuous(breaks = seq(1,66,1))
+ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Dynamics") + scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 ## Articulation{#sequence_art}
@@ -520,13 +502,11 @@ ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position =
 # For each individual
 vel_art_seq <- dt_vel_art[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, RowNr)]
 
-ggline(vel_art_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Articulation") +
-  scale_x_continuous(breaks = seq(1,67,1))
+ggline(vel_art_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Note", ylab = "", title = "KV: Articulation") + scale_x_continuous(breaks = seq(1,67,1))
 
 vel_diff_art_seq <- dt_vel_diff_art[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Articulation") +
-  scale_x_continuous(breaks = seq(1,66,1))
+ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "", title = "KV-Diff: Articulation") + scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 # Additional analysis{#additional}
