--- a/experiment-1/analysis/stats/articulation.Rmd
+++ b/experiment-1/analysis/stats/articulation.Rmd
@@ -193,8 +193,7 @@ ggline(kot_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", facet
 ```
 
 ```{r kot-art-trial-line-staccato, echo = FALSE, fig.height = 4}
-ggline(kot_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KOT (ms)", title = "KOT: Articulation/Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(kot_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "KOT (ms)", title = "KOT: Articulation/Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#kot_art_group_trial}
@@ -211,13 +210,11 @@ kot_art_trial_all
 - Error bars show SEM of the mean.
 
 ```{r kot-art-trial-all-line-legato, echo = FALSE}
-ggline(kot_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Legato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(kot_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Legato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r kot-art-trial-all-line-staccato, echo = FALSE}
-ggline(kot_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Staccato") +
-  scale_x_continuous(breaks = seq(1,8,1))
+ggline(kot_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Staccato") + scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key-Overlap Ratio (KOR) - Articulation
@@ -329,7 +326,6 @@ kot_dyn
 
 ### Plot
 #### Box plot
-
 ```{r kot-dyn-box,  echo = FALSE}
 ggboxplot(kot_dyn_trial, "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "KOT (ms)", title = "KOT: Dynamics") + facet_grid(Subcomponent ~ .)
 ```
@@ -496,8 +492,7 @@ ggline(kor_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = 
 # For each individual
 kot_art_seq <- dt_kot_art[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Articulation") +
-  scale_x_continuous(breaks = seq(1,66,1))
+ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Articulation") + scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 ## Dynamics{#sequence_dyn}
@@ -505,8 +500,7 @@ ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = posi
 # For each individual
 kot_dyn_seq <- dt_kot_dyn[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(kot_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Dynamics") +
-  scale_x_continuous(breaks = seq(1,66,1)) 
+ggline(kot_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Dynamics") + scale_x_continuous(breaks = seq(1,66,1)) 
 ```
 
 ```{r export, include = FALSE}
